fix drop shadow z index; fix hud invisible box capturing input; press esc to quit build mode

--- a/src/game/ui/ingame/Hover.scss
+++ b/src/game/ui/ingame/Hover.scss
@@ -1,7 +1,8 @@
 @import "../../../variables";
 
-.build-drop-shadow {
+.world-dom-component.build-drop-shadow {
   box-shadow: 0 0 8px 4px transparentize($color: $red3, $amount: 0.2);
+  z-index: 0;
 
   &.valid {
     box-shadow: 0 0 8px white;
