--- a/src/game/ui/ingame/hud/CellInspector.scss
+++ b/src/game/ui/ingame/hud/CellInspector.scss
@@ -34,6 +34,7 @@
     padding: 10px;
     border-radius: 2px;
     background: $light-gray3;
+    border-width: 1px;
 
     &:disabled {
       background: $light-gray5;
