--- a/src/game/ui/ingame/hud/HUD.scss
+++ b/src/game/ui/ingame/hud/HUD.scss
@@ -139,6 +139,8 @@
   right: 20px;
   display: flex;
   flex-direction: column;
+  pointer-events: none;
+  z-index: 1;
 }
 
 .player-inventory-container {
